--- a/CG 1 Laba.vcxproj
+++ b/CG 1 Laba.vcxproj
@@ -153,7 +153,7 @@
     <ClCompile Include="Mesh.cpp" />
     <ClCompile Include="Model.cpp" />
     <ClCompile Include="Pong.cpp" />
-    <ClCompile Include="Sphere.cpp" />
+    <ClCompile Include="CharacterBall.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BoxGameComponent.h" />
@@ -171,7 +171,7 @@
     <ClInclude Include="Model.h" />
     <ClInclude Include="Pong.h" />
     <ClInclude Include="resource.h" />
-    <ClInclude Include="Sphere.h" />
+    <ClInclude Include="CharacterBall.h" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
@@ -181,22 +181,7 @@
     <Text Include="3D_Shaders.txt" />
   </ItemGroup>
   <ItemGroup>
-    <Image Include="BeagleTexture.jpg" />
-    <Image Include="SpritzTexture.png" />
-  </ItemGroup>
-  <ItemGroup>
-    <Object Include="Beagle.obj">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </Object>
-    <Object Include="Spritz.obj">
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">true</ExcludedFromBuild>
-      <ExcludedFromBuild Condition="'$(Configuration)|$(Platform)'=='Release|x64'">true</ExcludedFromBuild>
-    </Object>
+    <Image Include="Pluto.jpg" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
